<resources>
    <string name="app_name">AccessBank</string>
    <string name="hint_account_number">Account Number</string>
    <string name="enter_your_new_type">Enter your new %1$s</string>
    <string name="new_s">New %1$s</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="email">email</string>
    <string name="phone_number">phone number</string>
    <string name="account_no">Account No</string>
    <string name="date">Date</string>
    <string name="back">Back</string>
    <string name="place_you_fingerprint">Place you fingerprint</string>
    <string name="facial_recognition_all_cap">FACIAL RECOGNITION</string>
    <string name="label_update_email">Email Update</string>
    <string name="label_update_phone">Phone Number Update</string>
    <string name="next">Next</string>
    <string name="home">Home</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>

</resources>